--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,15 @@
 # Database Configuration
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=GoBarber123
+POSTGRES_DB=nest_db
 
 # Application Database URL
-DATABASE_URL="postgresql://nest_user:nest_password@localhost:5432/nest_db?schema=public"
+# For local development (with Docker Compose)
+DATABASE_URL="postgresql://admin:GoBarber123@localhost:5432/nest_db?schema=public"
+
+# For Docker Compose (internal network)
+# DATABASE_URL="postgresql://admin:GoBarber123@postgres:5432/nest_db?schema=public"
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-here
+JWT_EXPIRES_IN=7d
