--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,9 +19,9 @@ jobs:
       postgres:
         image: postgres:16
         env:
-          POSTGRES_USER: admin
-          POSTGRES_PASSWORD: GoBarber123
-          POSTGRES_DB: nest_db
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -49,7 +49,7 @@ jobs:
     - name: Run database migrations
       run: npx prisma migrate deploy
       env:
-        DATABASE_URL: "postgresql://admin:GoBarber123@localhost:5432/nest_db?schema=public"
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     - name: Run linting
       run: npm run lint
@@ -57,16 +57,16 @@ jobs:
     - name: Run tests
       run: npm run test
       env:
-        DATABASE_URL: "postgresql://admin:GoBarber123@localhost:5432/nest_db?schema=public"
-        JWT_SECRET: "test-jwt-secret"
-        JWT_EXPIRES_IN: "7d"
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        JWT_SECRET: ${{ secrets.JWT_SECRET }}
+        JWT_EXPIRES_IN: ${{ secrets.JWT_SECRET }}
 
     - name: Run e2e tests
       run: npm run test:e2e
       env:
-        DATABASE_URL: "postgresql://admin:GoBarber123@localhost:5432/nest_db?schema=public"
-        JWT_SECRET: "test-jwt-secret"
-        JWT_EXPIRES_IN: "7d"
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        JWT_SECRET: ${{ secrets.JWT_SECRET }}
+        JWT_EXPIRES_IN: ${{ secrets.JWT_SECRET }}
 
   build:
     name: Build Docker Image
