fix(agb67-database-deploy): resolve issue in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,14 @@
 # Database Configuration
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=GoBarber123
-POSTGRES_DB=nest_db
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
 
 # Application Database URL
 # For local development (with Docker Compose)
-DATABASE_URL="postgresql://admin:GoBarber123@localhost:5432/nest_db?schema=public"
-
+DATABASE_URL=
 # For Docker Compose (internal network)
 # DATABASE_URL="postgresql://admin:GoBarber123@postgres:5432/nest_db?schema=public"
 
 # JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-here
-JWT_EXPIRES_IN=7d
+JWT_SECRET=
+JWT_EXPIRES_IN=
