--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,15 @@
 # Database Configuration
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+DATABASE_URL="postgresql://username:password@localhost:5432/database_name?schema=public"
 
-# Application Database URL
-DATABASE_URL=
+# JWT Configuration
+JWT_SECRET="your-super-secret-jwt-key"
+JWT_EXPIRES_IN="7d"
+
+# Application Configuration
+PORT=3333
+ALLOWED_ORIGINS="http://localhost:3000,https://your-frontend-domain.com"
+
+# PostgreSQL Configuration (for Docker)
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="password"
+POSTGRES_DB="api_gb"
