--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # Database Configuration
+# Use localhost when running on your machine (migrations, dev server). Use "postgres" only inside Docker.
 DATABASE_URL="postgresql://username:password@localhost:5432/database_name?schema=public"
 
 # JWT Configuration
